--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
         }
         .chart-container {
             position: relative;
-            height: 400px;
+            height: 300px;
             width: 100%;
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
+        }
+        @media (min-width: 768px) {
+            .chart-container {
+                height: 400px;
+                margin-bottom: 2rem;
+            }
         }
         @media (max-width: 640px) {
             .chart-container {
@@ -61,9 +67,9 @@
     <div class="container mx-auto p-4 sm:p-8 relative">
 
         <!-- Logo -->
-        <header class="w-full flex justify-center mb-8">
-            <div class="bg-white/10 backdrop-blur-xl p-4 sm:p-6 rounded-2xl shadow-2xl transition-transform duration-300 ease-in-out hover:scale-105">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Diseño%20sin%20título%20(2)-lg6MRJ2vzhdrcgIQujzC1HWjx25lKX.png" alt="Bienes Raices Janneth Aguirre" class="w-40 sm:w-60 h-auto object-contain">
+        <header class="w-full flex justify-center mb-4 sm:mb-8">
+            <div class="bg-white/10 backdrop-blur-xl p-3 sm:p-6 rounded-2xl shadow-2xl transition-transform duration-300 ease-in-out hover:scale-105">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Diseño%20sin%20título%20(2)-lg6MRJ2vzhdrcgIQujzC1HWjx25lKX.png" alt="Bienes Raices Janneth Aguirre" class="w-32 sm:w-60 h-auto object-contain">
             </div>
         </header>
 
@@ -92,6 +98,20 @@
                 <!-- Residential Projects Chart -->
                 <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
                     <h3 class="text-lg sm:text-xl font-bold mb-4">Número Proyectos Residenciales (Casas –Depts) Periodo Comparativo 2023 –2024</h3>
+                    <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Total 2023</p>
+                            <p class="text-lg sm:text-xl font-bold">989</p>
+                        </div>
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Total 2024</p>
+                            <p class="text-lg sm:text-xl font-bold">1.013</p>
+                        </div>
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Variación</p>
+                            <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                        </div>
+                    </div>
                     <div class="chart-container">
                         <canvas id="residentialProjectsChart"></canvas>
                     </div>
@@ -100,6 +120,20 @@
                 <!-- Available Units Chart -->
                 <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
                     <h3 class="text-lg sm:text-xl font-bold mb-4">Unidades Disponibles (Casas –Depts) 11 Principales Ciudades</h3>
+                    <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Total 2023</p>
+                            <p class="text-lg sm:text-xl font-bold">989</p>
+                        </div>
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Total 2024</p>
+                            <p class="text-lg sm:text-xl font-bold">1.013</p>
+                        </div>
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Variación</p>
+                            <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                        </div>
+                    </div>
                     <div class="chart-container">
                         <canvas id="availableUnitsChart"></canvas>
                     </div>
@@ -108,6 +142,20 @@
                 <!-- Absorption Chart -->
                 <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
                     <h3 class="text-lg sm:text-xl font-bold mb-4">Absorción Promedio Mes Proyectos Residenciales</h3>
+                    <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Total 2023</p>
+                            <p class="text-lg sm:text-xl font-bold">989</p>
+                        </div>
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Total 2024</p>
+                            <p class="text-lg sm:text-xl font-bold">1.013</p>
+                        </div>
+                        <div class="bg-white/5 p-2 rounded">
+                            <p class="text-sm opacity-80">Variación</p>
+                            <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                        </div>
+                    </div>
                     <div class="chart-container">
                         <canvas id="absorptionChart"></canvas>
                     </div>
@@ -117,12 +165,40 @@
                 <div class="flex flex-col lg:flex-row gap-8 page-break">
                     <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full lg:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
                         <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Oferta por Ciudad</h3>
+                        <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
+                            <div class="bg-white/5 p-2 rounded">
+                                <p class="text-sm opacity-80">Total 2023</p>
+                                <p class="text-lg sm:text-xl font-bold">989</p>
+                            </div>
+                            <div class="bg-white/5 p-2 rounded">
+                                <p class="text-sm opacity-80">Total 2024</p>
+                                <p class="text-lg sm:text-xl font-bold">1.013</p>
+                            </div>
+                            <div class="bg-white/5 p-2 rounded">
+                                <p class="text-sm opacity-80">Variación</p>
+                                <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                            </div>
+                        </div>
                         <div class="chart-container">
                             <canvas id="projectsDistributionChart"></canvas>
                         </div>
                     </div>
                     <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full lg:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
                         <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Unidades Disponibles</h3>
+                        <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
+                            <div class="bg-white/5 p-2 rounded">
+                                <p class="text-sm opacity-80">Total 2023</p>
+                                <p class="text-lg sm:text-xl font-bold">989</p>
+                            </div>
+                            <div class="bg-white/5 p-2 rounded">
+                                <p class="text-sm opacity-80">Total 2024</p>
+                                <p class="text-lg sm:text-xl font-bold">1.013</p>
+                            </div>
+                            <div class="bg-white/5 p-2 rounded">
+                                <p class="text-sm opacity-80">Variación</p>
+                                <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                            </div>
+                        </div>
                         <div class="chart-container">
                             <canvas id="unitsDistributionChart"></canvas>
                         </div>
