--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
         @media print {
             body {
@@ -59,27 +58,25 @@
         }
         @media (max-width: 640px) {
             .chart-container {
-                height: 300px;
+                height: 250px;
+                margin-bottom: 1rem;
+            }
+            .grid {
+                gap: 0.5rem;
             }
         }
     </style>
 </head>
 <body class="bg-gradient-to-b from-red-600 via-red-800 to-black min-h-screen text-white">
-    <div class="container mx-auto p-4 sm:p-8 relative">
+    <div class="container mx-auto px-3 py-4 sm:p-8 relative">
 
         <!-- Logo -->
-        <header class="w-full flex justify-center mb-4 sm:mb-8">
-            <div class="bg-white/10 backdrop-blur-xl p-3 sm:p-6 rounded-2xl shadow-2xl transition-transform duration-300 ease-in-out hover:scale-105">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Diseño%20sin%20título%20(2)-lg6MRJ2vzhdrcgIQujzC1HWjx25lKX.png" alt="Bienes Raices Janneth Aguirre" class="w-32 sm:w-60 h-auto object-contain">
+        <header class="w-full flex justify-center mb-3 sm:mb-8">
+            <div class="bg-white/10 backdrop-blur-xl p-2 sm:p-6 rounded-2xl shadow-2xl transition-transform duration-300 ease-in-out hover:scale-105">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Diseño%20sin%20título%20(2)-lg6MRJ2vzhdrcgIQujzC1HWjx25lKX.png" alt="Bienes Raices Janneth Aguirre" class="w-28 sm:w-60 h-auto object-contain">
             </div>
         </header>
 
-        <button id="downloadPDF" class="fixed top-4 right-4 bg-white/10 backdrop-blur-xl px-4 py-2 rounded-lg border border-white/20 hover:bg-white/20 transition-all duration-300 flex items-center gap-2 no-print">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-            </svg>
-            Descargar PDF
-        </button>
 
         <!-- Main Content -->
         <main>
@@ -102,22 +99,22 @@
             </section>
 
             <!-- Charts -->
-            <section class="space-y-8 sm:space-y-12">
+            <section class="space-y-4 sm:space-y-8">
                 <!-- Residential Projects Chart -->
-                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
-                    <h3 class="text-lg sm:text-xl font-bold mb-4">Número Proyectos Residenciales (Casas –Depts) Periodo Comparativo 2023 –2024</h3>
-                    <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Total 2023</p>
-                            <p class="text-lg sm:text-xl font-bold">989</p>
+                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-3 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
+                    <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Número Proyectos Residenciales (Casas –Depts) Periodo Comparativo 2023 –2024</h3>
+                    <div class="grid grid-cols-3 gap-1 sm:gap-2 mb-3 sm:mb-4 text-center text-sm sm:text-base">
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Total 2023</p>
+                            <p class="text-sm sm:text-xl font-bold">989</p>
                         </div>
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Total 2024</p>
-                            <p class="text-lg sm:text-xl font-bold">1.013</p>
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Total 2024</p>
+                            <p class="text-sm sm:text-xl font-bold">1.013</p>
                         </div>
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Variación</p>
-                            <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Variación</p>
+                            <p class="text-sm sm:text-xl font-bold">2,43%</p>
                         </div>
                     </div>
                     <div class="chart-container">
@@ -126,20 +123,20 @@
                 </div>
 
                 <!-- Available Units Chart -->
-                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
-                    <h3 class="text-lg sm:text-xl font-bold mb-4">Unidades Disponibles (Casas –Depts) 11 Principales Ciudades</h3>
-                    <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Total 2023</p>
-                            <p class="text-lg sm:text-xl font-bold">989</p>
+                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-3 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
+                    <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Unidades Disponibles (Casas –Depts) 11 Principales Ciudades</h3>
+                    <div class="grid grid-cols-3 gap-1 sm:gap-2 mb-3 sm:mb-4 text-center text-sm sm:text-base">
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Total 2023</p>
+                            <p class="text-sm sm:text-xl font-bold">989</p>
                         </div>
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Total 2024</p>
-                            <p class="text-lg sm:text-xl font-bold">1.013</p>
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Total 2024</p>
+                            <p class="text-sm sm:text-xl font-bold">1.013</p>
                         </div>
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Variación</p>
-                            <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Variación</p>
+                            <p class="text-sm sm:text-xl font-bold">2,43%</p>
                         </div>
                     </div>
                     <div class="chart-container">
@@ -148,20 +145,20 @@
                 </div>
 
                 <!-- Absorption Chart -->
-                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
-                    <h3 class="text-lg sm:text-xl font-bold mb-4">Absorción Promedio Mes Proyectos Residenciales</h3>
-                    <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Total 2023</p>
-                            <p class="text-lg sm:text-xl font-bold">989</p>
+                <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-3 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15 page-break">
+                    <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Absorción Promedio Mes Proyectos Residenciales</h3>
+                    <div class="grid grid-cols-3 gap-1 sm:gap-2 mb-3 sm:mb-4 text-center text-sm sm:text-base">
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Total 2023</p>
+                            <p class="text-sm sm:text-xl font-bold">989</p>
                         </div>
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Total 2024</p>
-                            <p class="text-lg sm:text-xl font-bold">1.013</p>
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Total 2024</p>
+                            <p class="text-sm sm:text-xl font-bold">1.013</p>
                         </div>
-                        <div class="bg-white/5 p-2 rounded">
-                            <p class="text-sm opacity-80">Variación</p>
-                            <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                        <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                            <p class="text-xs sm:text-sm opacity-80">Variación</p>
+                            <p class="text-sm sm:text-xl font-bold">2,43%</p>
                         </div>
                     </div>
                     <div class="chart-container">
@@ -170,41 +167,41 @@
                 </div>
 
                 <!-- Distribution Charts -->
-                <div class="flex flex-col lg:flex-row gap-8 page-break">
-                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full lg:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
-                        <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Oferta por Ciudad</h3>
-                        <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
-                            <div class="bg-white/5 p-2 rounded">
-                                <p class="text-sm opacity-80">Total 2023</p>
-                                <p class="text-lg sm:text-xl font-bold">989</p>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-8 page-break">
+                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-3 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15">
+                        <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Peso Porcentual Oferta por Ciudad</h3>
+                        <div class="grid grid-cols-3 gap-1 sm:gap-2 mb-3 sm:mb-4 text-center text-sm sm:text-base">
+                            <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                                <p class="text-xs sm:text-sm opacity-80">Total 2023</p>
+                                <p class="text-sm sm:text-xl font-bold">989</p>
                             </div>
-                            <div class="bg-white/5 p-2 rounded">
-                                <p class="text-sm opacity-80">Total 2024</p>
-                                <p class="text-lg sm:text-xl font-bold">1.013</p>
+                            <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                                <p class="text-xs sm:text-sm opacity-80">Total 2024</p>
+                                <p class="text-sm sm:text-xl font-bold">1.013</p>
                             </div>
-                            <div class="bg-white/5 p-2 rounded">
-                                <p class="text-sm opacity-80">Variación</p>
-                                <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                            <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                                <p class="text-xs sm:text-sm opacity-80">Variación</p>
+                                <p class="text-sm sm:text-xl font-bold">2,43%</p>
                             </div>
                         </div>
                         <div class="chart-container">
                             <canvas id="projectsDistributionChart"></canvas>
                         </div>
                     </div>
-                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-4 sm:p-6 w-full lg:w-1/2 transition duration-300 ease-in-out hover:bg-white/15">
-                        <h3 class="text-lg sm:text-xl font-bold mb-4">Peso Porcentual Unidades Disponibles</h3>
-                        <div class="grid grid-cols-1 sm:grid-cols-3 gap-2 mb-4 text-center">
-                            <div class="bg-white/5 p-2 rounded">
-                                <p class="text-sm opacity-80">Total 2023</p>
-                                <p class="text-lg sm:text-xl font-bold">989</p>
+                    <div class="backdrop-blur-xl bg-white/10 border-white/20 shadow-2xl rounded-lg p-3 sm:p-6 transition duration-300 ease-in-out hover:bg-white/15">
+                        <h3 class="text-base sm:text-xl font-bold mb-3 sm:mb-4">Peso Porcentual Unidades Disponibles</h3>
+                        <div class="grid grid-cols-3 gap-1 sm:gap-2 mb-3 sm:mb-4 text-center text-sm sm:text-base">
+                            <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                                <p class="text-xs sm:text-sm opacity-80">Total 2023</p>
+                                <p class="text-sm sm:text-xl font-bold">989</p>
                             </div>
-                            <div class="bg-white/5 p-2 rounded">
-                                <p class="text-sm opacity-80">Total 2024</p>
-                                <p class="text-lg sm:text-xl font-bold">1.013</p>
+                            <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                                <p class="text-xs sm:text-sm opacity-80">Total 2024</p>
+                                <p class="text-sm sm:text-xl font-bold">1.013</p>
                             </div>
-                            <div class="bg-white/5 p-2 rounded">
-                                <p class="text-sm opacity-80">Variación</p>
-                                <p class="text-lg sm:text-xl font-bold">2,43%</p>
+                            <div class="bg-white/5 p-1.5 sm:p-2 rounded">
+                                <p class="text-xs sm:text-sm opacity-80">Variación</p>
+                                <p class="text-sm sm:text-xl font-bold">2,43%</p>
                             </div>
                         </div>
                         <div class="chart-container">
